--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="main-bloque">
           <img src="./img/icon-3.png" alt="">
           <p>TE ESPERAMOS PARA CELEBRAR LA CENA DE NAVIDAD EN NUESTRO HOGAR. <strong>EPECUÉN 374</strong>, A PARTIR DE LAS 20:00 HS. <br> HACE CLICK PARA SABER COMO LLEGAR</p>
-          <a class="boton2" target="_blank"  href="https://www.google.com.ar/maps/dir//Torres+Le+Parc+Puerto+Madero,+Buenos+Aires/@-34.6113016,-58.3635523,17z/data=!4m18!1m8!3m7!1s0x95a3352802d6075b:0x231f62ca91d69290!2sTorres+Le+Parc+Puerto+Madero,+Buenos+Aires!3b1!8m2!3d-34.611306!4d-58.360972!16s%2Fg%2F12ht30fkq!4m8!1m0!1m5!1m1!1s0x95a3352802d6075b:0x231f62ca91d69290!2m2!1d-58.360972!2d-34.611306!3e3?entry=ttu">COMO LLEGAR</a>    
+          <a class="boton2" target="_blank"  href="https://www.google.com/maps/dir//Epecu%C3%A9n+374,+B1827GZH+Ingeniero+Budge,+Provincia+de+Buenos+Aires/@-34.7301736,-58.4707368,17z/data=!4m17!1m7!3m6!1s0x95bcce798ffe37b3:0xf08a58e505a75fbd!2sEpecu%C3%A9n+374,+B1827GZH+Ingeniero+Budge,+Provincia+de+Buenos+Aires!3b1!8m2!3d-34.7301736!4d-58.4681619!4m8!1m0!1m5!1m1!1s0x95bcce798ffe37b3:0xf08a58e505a75fbd!2m2!1d-58.4681619!2d-34.7301736!3e3?entry=ttu">COMO LLEGAR</a>    
       </div>
 </main>
   
